cmake_minimum_required(VERSION 3.19)
project(first_cpp)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(first_cpp
        Program1.cpp
        Program10.cpp
        Program2.cpp
        Program3.cpp
        Program4.cpp
        Program5.cpp
        Program6.cpp
        Program7.cpp
        Program8.cpp
        Program9.cpp)
